Reader: Fix gravatar alignment

--- a/client/blocks/reader-subscription-list-item/style.scss
+++ b/client/blocks/reader-subscription-list-item/style.scss
@@ -60,7 +60,7 @@
 
 .reader-subscription-list-item .gravatar {
 	float: left;
-	margin: 2px 8px 0 0;
+	margin: 4px 12px 0 0;
 	height: 32px;
 	min-height: 32px;
 	min-width: 32px;
